<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionsid">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_download_bar">

            <TextView
                android:id="@+id/title"
                style="@style/TextCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/download_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/download_id"
                style="@style/TextCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/download"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/size_id"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/size_id"
                style="@style/TextCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_19sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/size"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintEnd_toStartOf="@+id/seeders_id"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/seeders_id"
                style="@style/TextCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/seaders"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/leechers_id"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/leechers_id"
                style="@style/TextCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/leechers"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_dark"
            tools:listitem="@layout/cardview_torrent" />

        <include
            android:id="@+id/result_id"
            layout="@layout/view_search_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"></include>

        <include
            android:id="@+id/view_progress_id"
            layout="@layout/view_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></include>

    </LinearLayout>
</FrameLayout>